--- a/empleados/index.html
+++ b/empleados/index.html
@@ -1,8 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-	<key>URL</key>
-	<string>https://github.com/11eleven-cl/11eleven.cl/blob/gh-pages/index.html1</string>
-</dict>
-</plist>
+<meta http-equiv="refresh" content="0; URL=http://ec2-3-22-175-145.us-east-2.compute.amazonaws.com:8069/" />
